# clearpath_robots_sim

./: CMakeLists.txt  README.md  package.xml
config/a200/: control.yaml
include/clearpath_robots_sim/: visibility_control.h
include/clearpath_robots_sim/diff_drive/: hardware.hpp  hardware_interface.hpp
include/clearpath_robots_sim/hardware_interfaces/diff_drive/: hardware.hpp  hardware_interface.hpp
include/clearpath_robots_sim/path_followers/: path_follower_controller.hpp
include/clearpath_robots_sim/path_followers/MPC/: diff_drive_model.hpp  dynamic_model.hpp  mpc_controller.hpp  trajectory_generator.hpp
include/clearpath_robots_sim/path_followers/models/: diff_drive_model.hpp  dynamic_model.hpp
launch/: bringup.launch.py
src/a200/: motor_simulator_interface.cpp
src/hardware_interfaces/diff_drive/: hardware.cpp  hardware.xml  hardware_interface.cpp
src/path_followers/MPC/: mpc_controller.cpp  mpc_controller_node.cpp
src/path_followers/pure_pursuit/: pure_pursuit.cpp
urdf/a200/: a200.urdf.xacro
urdf/a200/attachments/: bumper.urdf.xacro  observer_backpack.urdf.xacro  sensor_arch.urdf.xacro  top_plate.urdf.xacro
urdf/a200/wheels/: wheel.urdf.xacro
urdf/a300/: a300.urdf.xacro
urdf/a300/attachments/: bumper.urdf.xacro  top_plate.urdf.xacro
urdf/a300/mobility/: diff_drive.urdf.xacro
urdf/a300/wheels/: wheel.urdf.xacro
urdf/dd100/: dd100.urdf.xacro
urdf/dd100/attachments/: top_plate.urdf.xacro
urdf/dd100/wheels/: wheel.urdf.xacro
urdf/dd150/: dd150.urdf.xacro
urdf/dd150/wheels/: wheel.urdf.xacro
urdf/do100/: do100.urdf.xacro
urdf/do100/wheels/: wheel.urdf.xacro
urdf/j100/: j100.urdf.xacro
urdf/j100/attachments/: fender.urdf.xacro  top_plate.urdf.xacro
urdf/j100/wheels/: wheel.urdf.xacro
urdf/r100/: r100.urdf.xacro  rocker.urdf.xacro
urdf/r100/attachments/: fams.urdf.xacro  hams.urdf.xacro  legs.urdf.xacro  tower.urdf.xacro
urdf/r100/wheels/: wheel.urdf.xacro
urdf/w200/: diff_unit.urdf.xacro  w200.urdf.xacro
urdf/w200/attachments/: arm_plate.urdf.xacro  bulkhead.urdf.xacro  generator.urdf.xacro
urdf/w200/wheels/: track.urdf.xacro  wheel.urdf.xacro
